--- a/EDP/industrie.html
+++ b/EDP/industrie.html
@@ -6,8 +6,13 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Mukta+Vaani" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Mukta+Vaani:200,300" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/icon.png" />
+
+	<script src="https://code.jquery.com/jquery-3.2.0.min.js" type="text/javascript"></script>
+	<script src="js/script.js" type="text/javascript"></script>
+
   <meta charset="UTF-8">
-  <title>EDP Home</title>
+  <title>Industrie</title>
   <meta name="Keywords" content="pelsma, beheer, bekabeling,
   domotica, elektricien, electricien, communicatie,
   dataaansluitingen, datastromen, digitale, draadloze,
@@ -43,8 +48,9 @@
     <ul class="menu">
       <li><a href="index.html">Home</a></li>
       <li class="dropdown">
-        <a href="diensten.html" class="dropbtn">Diensten</a>
+        <a href="#" class="dropbtn">Diensten</a>
           <div class="dropdown-content">
+            <a href="diensten.html">Onze Diensten</a>
             <a href="huisinstallaties.html">Huisinstallaties</a>
             <a href="utiliteit.html">Utiliteit</a>
             <a href="industrie.html">Industrie</a>
